mobile alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ footer {
 }
 
 /* Media Queries */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 824px) {
   body {
     width: 50%;
     margin: 60px auto;
